--- a/index.html
+++ b/index.html
@@ -1,6 +1,35 @@
-<html>
-  <head></head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coming Soon</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #000;
+        height: 100vh;
+        overflow: hidden;
+      }
+
+      .coming-soon {
+        width: 100%;
+        height: 100%;
+        background: url("soon.webp") no-repeat center center/cover;
+      }
+
+      @media (max-width: 768px) {
+        .coming-soon {
+          background: url("soon.webp") no-repeat center center/cover;
+        }
+      }
+    </style>
+  </head>
   <body>
-    <h1> Coming Soon</h1>
-    <body>
+    <div class="coming-soon"></div>
+  </body>
 </html>
